draggable z-index fixed; multiple drops

--- a/static/main.css
+++ b/static/main.css
@@ -68,3 +68,7 @@
 .incorrect{
 	color: red;
 }
+
+.ui-draggable{
+	z-index:999999;
+}
